--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Update values.yaml
         run: |
           cd helm
-          sed -i 's|APP_VERSION:.*|APP_VERSION: '${{ github.sha }}'|' values.yaml 
+          sed -i "s/^\(\s*APP_VERSION:\s*\).*/\1${{ github.sha }}/" values.yaml 
           git config --global user.name 'sunil95328'
           git config --global user.email 'sunilyadav95328@gmail.com'
           git add values.yaml
