--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+
 env:
   DOCKERHUB_USERNAME: ${{ secrets.DOCKER_USERNAME }}
   DOCKERHUB_KEY: ${{ secrets.DOCKER_KEY }}
@@ -12,32 +13,40 @@ env:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    
-    permissions:  # 👈 Required to allow pushing back to the repo
+
+    permissions:
       contents: write
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
       - name: Login to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ env.DOCKERHUB_USERNAME }}
           password: ${{ env.DOCKERHUB_KEY }}
 
-      - name: Build Docker image
-        run: docker build -t ${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }} .
-
-      - name: Push Docker image
-        run: docker push ${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+      - name: Build and push Docker image
+        run: |
+          docker buildx build \
+            --platform linux/amd64 \
+            -t ${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }} \
+            --push .
 
       - name: Update values.yaml
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           cd helm
-          sed -i "s/^\(\s*APP_VERSION:\s*\).*/\1${{ github.sha }}/" values.yaml 
+          sed -i "s/^\(\s*APP_VERSION:\s*\).*/\1${{ github.sha }}/" values.yaml
           git config --global user.name 'sunil95328'
           git config --global user.email 'sunilyadav95328@gmail.com'
+          git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }}
           git add values.yaml
-          git commit -m "Update values.yaml"
-          git push
+          git commit -m "Update values.yaml to version ${{ github.sha }}"
+          git push origin master
+
