--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,11 +31,8 @@ jobs:
           password: ${{ env.DOCKERHUB_KEY }}
 
       - name: Build and push Docker image
-        run: |
-          docker buildx build \
-            --platform linux/amd64 \
-            -t ${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }} \
-            --push .
+        run: docker buildx build --platform linux/amd64 -t ${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }} --push .
+
 
       - name: Update values.yaml
         env:
