--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,7 @@ jobs:
           password: ${{ env.DOCKERHUB_KEY }}
 
       - name: Build and push Docker image
+        working-directory: ./
         run: docker buildx build --platform linux/amd64 -t ${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }} --push .
 
 
