--- a/nodeapp/templates/service.yaml
+++ b/nodeapp/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "helm.fullname" . }}
+  name: {{ include "nodeapp.fullname" . }}
   labels:
-    {{- include "helm.labels" . | nindent 4 }}
+    {{- include "nodeapp.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
